GNOME Bugzilla – Bug 740877
evince-thumbnailer can generate too large thumbnails
Last modified: 2014-11-29 09:35:54 UTC
Created attachment 291760 [details] [review] thumbnailer: Use correct maximum size for thumbnail images I just noticed that the thumbnail images generated by the thumbnailer can be too tall when generated from documents using the portrait format: $ ./evince-thumbnailer -s 256 file:///home/sebastian/Downloads/1205.5524v3.pdf /tmp/evince-test.png $ file /tmp/evince-test.png /tmp/evince-test.png: PNG image data, 256 x 331, 8-bit/color RGBA, non-interlaced This only causes the temporary thumbnail image generated by evince-thumbnailer to be rescaled again before being stored in the thumbnail cache, which wastes some CPU cycles and probably looks a bit blurrier. I'm attaching a patch that fixes this issue: $ ./evince-thumbnailer -s 256 file:///home/sebastian/Downloads/1205.5524v3.pdf /tmp/evince-test.png $ file /tmp/evince-test.png /tmp/evince-test.png: PNG image data, 198 x 256, 8-bit/color RGBA, non-interlaced
Comment on attachment 291760 [details] [review] thumbnailer: Use correct maximum size for thumbnail images Pushed, thanks!