thumbnailer: Use correct maximum size for thumbnail images

https://bugzilla.gnome.org/show_bug.cgi?id=740877